# StepItOut

./: .gitignore  CLAUDE.md  DEP.bat  DEPLOY.bat  MANUAL.md  README.md  Run.bat  index.html  package-lock.json  package.json  tsconfig.node.tsbuildinfo  vite.config.js  vite.config.ts
.MD Files/: app_overview.md  premiere_bridge.md  sequencer_rules.md  ui_design.md
.claude/: settings.local.json
.github/workflows/: release.yml
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  premiere_xml.rs
src-tauri/src/commands/: file_io.rs  mod.rs  premiere.rs  sequence.rs
src/components/: BottomPanel.tsx  ExportModal.tsx  ExportProgress.tsx  ImagePreviewModal.tsx  InfoModal.tsx  LayerRow.tsx  LayerThumbnail.tsx  PreviewMonitor.tsx  SequencerGrid.tsx  TitleBar.tsx  TopBar.tsx  UpdateChecker.tsx
src/engine/: envelope.ts  exportWorker.ts  exporter.ts  frameMath.ts  index.ts  patterns.ts  playback.ts  webgl.ts
src/hooks/: useKeyboardShortcuts.ts
src/store/: useSequencerStore.ts
src/styles/: index.css
src/types/: index.ts
